--- a/functions/package.json
+++ b/functions/package.json
@@ -7,13 +7,15 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "web-push": "web-push"
   },
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase-admin": "^5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-functions": "^1.0.3",
+    "web-push": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
